docs: document EC2 deployment, port mapping, Kotlin patterns, and glossary
Co-authored-by: tompais <63855504+tompais@users.noreply.github.com>